--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@ coreschema==0.0.4
 Django==2.2.12
 djangorestframework==3.11.0
 drf-yasg==1.17.1
+gunicorn==20.0.4
 idna==2.9
 inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 packaging==20.3
-pkg-resources==0.0.0
 pyparsing==2.4.6
 pytz==2019.3
 requests==2.23.0
