--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itypes==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 packaging==20.3
+pkg-resources==0.0.0
 pyparsing==2.4.6
 pytz==2019.3
 requests==2.23.0
@@ -21,3 +22,4 @@ six==1.14.0
 sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
+whitenoise==5.0.1
